a few things working with latest, most bindings updated

--- a/src/order/list.component
+++ b/src/order/list.component
@@ -24,7 +24,7 @@
           <span class="badge">New Order!</span>
           <p class="action">
             Mark as:
-            <a href="javascript://" can-click="{markAs 'preparing'}">
+            <a href="javascript://" ($click)="markAs('preparing')">
               Preparing
             </a>
           </p>
@@ -34,7 +34,7 @@
           <span class="badge">Preparing</span>
           <p class="action">
             Mark as:
-            <a href="javascript://"  can-click="{markAs 'delivery'}">
+            <a href="javascript://" ($click)="markAs('delivery')">
               Out for delivery
             </a>
           </p>
@@ -44,7 +44,7 @@
           <span class="badge">Out for delivery</span>
           <p class="action">
             Mark as:
-            <a href="javascript://"  can-click="{markAs 'delivered'}">
+            <a href="javascript://" ($click)="markAs('delivered')">
               Delivered
             </a>
           </p>
@@ -55,7 +55,7 @@
           {{/eq}}
 
           <p class="action">
-            <a href="javascript://"  can-click="{destroy}">Delete</a>
+            <a href="javascript://" ($click)="destroy()">Delete</a>
           </p>
         </div>
       </div>
