--- a/src/header.component
+++ b/src/header.component
@@ -19,13 +19,13 @@
             <div class="collapse navbar-collapse" id="pmo-navbar-collapse">
               <ul class="nav navbar-nav">
                 <li class="{{#eq page 'home'}}active{{/eq}}">
-                    <a can-href='{page="home"}'>Home</a>
+                    <a href='{{routeUrl page="home"}}'>Home</a>
                 </li>
                 <li class="{{#eq page 'restaurants'}}active{{/eq}}">
-                    <a can-href='{page="restaurants"}'>Restaurants</a>
+                    <a href='{{routeUrl page="restaurants"}}'>Restaurants</a>
                 </li>
                 <li class="{{#eq page 'orders'}}active{{/eq}}">
-                    <a can-href='{page="orders"}'>Order History</a>
+                    <a href='{{routeUrl page="orders"}}'>Order History</a>
                 </li>
               </ul>
             </div>
