--- a/src/order/phone/phone.component
+++ b/src/order/phone/phone.component
@@ -5,7 +5,7 @@
   <template>
     <div class="form-group{{#if error}} has-error{{/if}}">
       <label>Phone:</label>
-      <input name="phone" type="text" can-keyup="{setPhoneValue @element.val}">
+      <input name="phone" type="text" ($keyup)="setPhoneValue($element.val)">
       {{#if error}}
         {{#eq order.phone '911'}}
           <p>That's not your real number :-(</p>
