Eliminate missing key warning for scope.vm.action

--- a/src/order/history.component
+++ b/src/order/history.component
@@ -42,6 +42,7 @@
         listTitle:raw="Delivered"
         status:raw="delivered"
         statusTitle:raw="Delivered"
+        action:raw=""
         emptyMessage:raw="No delivered orders"/>
     </div>
   </view>
